Added hxcpp to the list of lib to be installed

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ sudo: false
 install:
   - haxelib install munit > /dev/null
   - haxelib install kha > /dev/null
+  - haxelib install hxcpp > /dev/null
   - haxelib list
 
 script:
